<resources>
    <string name="app_name">ChangeThemes</string>
    <string name="text_change_color">Click to change the theme color</string>
    <string name="nigth_mode">Night Mode</string>
    <string name="botao_adicionar">Adicionar</string>
    <string name="telefone">Telefone</string>
    <string name="endere_o">Endereço</string>
    <string name="nome">Nome</string>
    <string name="cadastrar_novo_cliente">CADASTRAR NOVO CLIENTE</string>
</resources>